fix: wrap all of a statement in hover element (#10)
We had done a hack to get hover popups before which meant that only the
`.` would recognize hover / click events. This change makes it so that
the entire statement has such recognition. However, there is still a
limitation that multi-line statements have to be the only statements on
their lines. This is because shiki wraps lines in a span so once we
become a multi-line statement we have to wrap the entire line. There is
probably a good workaround but it's not immediately evident to my.

--- a/app/global.css
+++ b/app/global.css
@@ -10,7 +10,8 @@
 /* Adelfa hover popups */
 .twoslash-hover {
   position: relative;
-  border-bottom: 1px dotted currentColor;
+  text-decoration: underline dotted currentColor;
+  text-underline-offset: 3px;
   cursor: pointer;
 }
 
@@ -51,4 +52,3 @@
   height: 0;
   pointer-events: none;
 }
-
